s08 code: implement PageMemory v1 + handout (Phase 3 opener)
ignite-gogogo/s08-page-memory/(从 s01 干净骨架,Phase 3 新支不带 NIO 代码):
PageIdUtils 位运算 + FullPageId rotation-blind(Stafford mix64 / MH3 mix32)+
PageMemory 接口(extends PageIdAllocator+PageSupport,裁 metrics 上漏)+
OffHeap(包 sun.misc.Unsafe;wrapPointer 反射 DirectByteBuffer 构造器)+
PageMemoryNoStoreImpl 单段 bump + 24B 页头 + 粗锁占位。

mvn test → 10 passed, 0 failed(PageIdUtils 4 + FullPageId 2 +
PageMemoryNoStoreImpl 4),§5 具名测试全在且绿;注释齐全复跑绿。

踩坑(已写入讲义):JDK21 的 DirectByteBuffer 只有 private (long,long)
构造器(无 (long,int)),用 buf.getClass() try 两签名 + 记 cap 类型
newInstance 按需传(int/long,反射不自动提升);surefire 加
--add-opens java.base/java.nio(sun.misc.Unsafe 在 jdk.unsupported 不需 opens)。

讲义 docs-learn/S08-page-memory-v1.md(8 节,check-handouts 过);
deferred.md 加 Phase 3 section;PROGRESS S08 全勾 + 已验证工程 + 当前位置。

Co-Authored-By: Claude <noreply@anthropic.com>